tests/e2e/object_assign_float.story
http server
    server = 1.5
